# spacesloths

./: .gitignore  README.md  spacesloths.cabal  stack-lts-16.26-windows.yaml  stack.yaml
.github/workflows/: linux.yml
app/: Main.hs
src/SpaceSloths/: Assets.hs  Commands.hs  Game.hs  GameMap.hs  PathFinding.hs  Renderer.hs  Sloth.hs  Task.hs
