name:                spacesloths
version:             0.1.0.1
-- synopsis:
-- description:
homepage:            https://github.com/tjlaxs/spacesloths#readme
author:              Tero Laxström
maintainer:          tlax@neonpeons.com
copyright:           2020 Tero Laxström
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable spacesloths
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , RecordWildCards
                     , DeriveAnyClass
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , spacesloths
                     , array
                     , threepenny-gui

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , RecordWildCards
                     , DeriveAnyClass
  build-depends:       base >= 4.7 && < 5
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , array
  exposed-modules:     SpaceSloths.GameMap
                     , SpaceSloths.PathFinding
                     , SpaceSloths.Sloth
